--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "totodsservermongodb",
-  "version": "1.0.0",
-  "description": "Creating server for todos project but using MongoDB",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ZakariyyaScavotto/totodsServerMongoDB.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ZakariyyaScavotto/totodsServerMongoDB/issues"
-  },
-  "homepage": "https://github.com/ZakariyyaScavotto/totodsServerMongoDB#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.0",
-    "nodemon": "^2.0.19"
-  }
+	"name": "totodsservermongodb",
+	"version": "1.0.0",
+	"description": "Creating server for todos project but using MongoDB",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ZakariyyaScavotto/totodsServerMongoDB.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/ZakariyyaScavotto/totodsServerMongoDB/issues"
+	},
+	"homepage": "https://github.com/ZakariyyaScavotto/totodsServerMongoDB#readme",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"mongoose": "^6.5.0",
+		"nodemon": "^2.0.19"
+	}
 }
